scripts/nullness/annotator/url696d9a93c9_liaosiwei_bayesnetwork_tgz-pJ8-tutorial_TutorialJ8.txt
../annotator/url696d9a93c9_liaosiwei_bayesnetwork_tgz-pJ8-tutorial_TutorialJ8/src/org/eclipse/recommenders/jayes/inference/junctionTree/JunctionTreeAlgorithm.java:38: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url696d9a93c9_liaosiwei_bayesnetwork_tgz-pJ8-tutorial_TutorialJ8/src/org/eclipse/recommenders/jayes/inference/junctionTree/JunctionTreeAlgorithm.java:345: error: cannot find symbol
    @Initializer private void initializeFields(int numNodes) {
     ^
  symbol:   class Initializer
  location: class JunctionTreeAlgorithm
2 errors
